add dummy data, more functionality

--- a/stylus/tyler.styl
+++ b/stylus/tyler.styl
@@ -1,2 +1,17 @@
+.tile-cell
+	float left
+	height 300px
+	width 300px
+
 .tile
-	position absolute
+	float left
+
+.tile-big
+	background red
+	height 100%
+	width 100%
+
+.tile-small
+	background blue
+	height 50%
+	width 50%
