flip fx look gooood

--- a/stylus/tyler.styl
+++ b/stylus/tyler.styl
@@ -3,11 +3,16 @@
 
 .tile
 	float left
+	-webkit-backface-visibility hidden
 	-webkit-perspective 1000
-	-webkit-transition -webkit-transform 1s linear
 
 	&.flipped
-		-webkit-transform: rotateX(180deg)
+		z-index 3
+
+		.tile-inner
+			//width: 200%
+			//z-index 4
+			-webkit-transform: rotateX(180deg)
 
 .tile-big
 	height 100%
@@ -22,6 +27,13 @@
 
 	.tile-front
 		background blue
+
+.tile-inner
+	height 100%
+	position relative
+	width 100%
+	-webkit-transform-style preserve-3d
+	-webkit-transition all .5s linear
 
 .tile-front
 .tile-back
