--- a/stylus/tyler.styl
+++ b/stylus/tyler.styl
@@ -1,11 +1,10 @@
 .tile-cell
-	float left
+	position absolute
 
 	&.focus
 		z-index 3
 
 .tile
-	float left
 	-webkit-backface-visibility hidden
 	-webkit-perspective 1000
 
@@ -13,9 +12,10 @@
 		z-index 3
 
 		.tile-inner
-			//width: 200%
+			height 300%
+			width 200%
 			z-index 4
-			-webkit-animation Enlarge 1s 1 0
+			//-webkit-animation Enlarge 1s 1 0
 			-webkit-transform rotateX(180deg)
 
 .tile-big
