--- a/stylus/tyler.styl
+++ b/stylus/tyler.styl
@@ -18,6 +18,7 @@
 
 .tile-front
 .tile-back
+	background-size cover
 	bottom 0
 	left 0
 	position absolute
@@ -31,3 +32,12 @@
 .tile-back
 	background #333
 	-webkit-transform: rotateX(180deg)
+
+.name
+	color rgba(255,255,255,.7)
+	display block
+	font-size 30px
+	padding 0 3px
+	position absolute
+	bottom 0
+	left 0
