moved flip transforms to single element

--- a/stylus/tyler.styl
+++ b/stylus/tyler.styl
@@ -8,7 +8,7 @@
 
 		.tile-inner
 			z-index 4
-			-webkit-transform rotateX(180deg)
+			//-webkit-transform rotateX(180deg)
 
 .tile-inner
 	height 100%
