--- a/stylus/tyler.styl
+++ b/stylus/tyler.styl
@@ -27,11 +27,12 @@
 	-webkit-backface-visibility hidden
 
 .tile-front
+	background-color #1BA1E2 // see http://stackoverflow.com/a/11579376/435124
 	z-index 2
 
 .tile-back
 	background #333
-	-webkit-transform: rotateX(180deg)
+	-webkit-transform rotateX(180deg)
 
 .name
 	color rgba(255,255,255,.7)
