--- a/stylus/tyler.styl
+++ b/stylus/tyler.styl
@@ -1,4 +1,5 @@
 .tile
+	-webkit-box-shadow 0 0 3px rgba(0,0,0,.3)
 	position absolute
 	-webkit-backface-visibility hidden
 	-webkit-perspective 1000
@@ -8,13 +9,14 @@
 
 		.tile-inner
 			z-index 4
-			-webkit-animation Flip 1s forwards
+			-webkit-animation Flip .7s forwards
 
 .tile-inner
 	height 100%
 	position relative
 	width 100%
-	-webkit-animation Unflip 1s
+	-webkit-animation Unflip .5s
+	-webkit-backface-visibility hidden
 	-webkit-transform-style preserve-3d
 
 .tile-front
@@ -32,7 +34,7 @@
 	z-index 2
 
 .tile-back
-	background #333
+	background #eee
 	-webkit-transform rotateX(180deg)
 
 .name
@@ -51,6 +53,21 @@
 
 	100%
 		-webkit-transform rotateX(180deg)
+
+	// 0%
+	// 	-webkit-transform rotateX(0)
+
+	// 40%
+	// 	-webkit-transform rotateX(190deg)
+
+	// 55%
+	// 	-webkit-transform rotateX(160deg)
+
+	// 70%
+	// 	-webkit-transform rotateX(185deg)
+
+	// 100%
+	// 	-webkit-transform rotateX(180deg)
 
 @-webkit-keyframes Unflip
 
