measure @element, not window

--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -6,5 +6,6 @@
 body
 	font 13px "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
 
-.sex-f
-	background-image: url(../demo/img/icon/noun_project_13762.svg)
+#tyler
+	margin 0 auto
+	max-width 320px
